# apply-macro

./: .editorconfig  COPYRIGHT.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: no_std.rs
